@@ -19,7 +19,7 @@
 . "${srcdir=.}/tests/init.sh"; path_prepend_ ./src
 print_ver_ sync
 
-touch file
+touch file || framework_failure_
 
 # fdatasync+syncfs is nonsensical
 returns_ 1 sync --data --file-system || fail=1
@@ -28,6 +28,11 @@ returns_ 1 sync --data --file-system || fail=1
 returns_ 1 sync -d || fail=1
 
 # Test syncing of file (fsync) (little side effects)
+sync file || fail=1
+
+# Test syncing of write-only file - which failed since adding argument
+# support to sync in coreutils-8.24.
+chmod 0200 file || framework_failure_
 sync file || fail=1
 
 # Ensure multiple args are processed and diagnosed
